--- a/student.ipynb
+++ b/student.ipynb
@@ -16,17 +16,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here - remember to use markdown cells for comments as well!"
+    "# Your code here - remember to use markdown cells for comments as well!\n",
+    "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1=pd.read_csv('zippedData/imdb.name.basics.csv.gz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nconst</th>\n",
+       "      <th>primary_name</th>\n",
+       "      <th>birth_year</th>\n",
+       "      <th>death_year</th>\n",
+       "      <th>primary_profession</th>\n",
+       "      <th>known_for_titles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>nm0061671</td>\n",
+       "      <td>Mary Ellen Bauder</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>miscellaneous,production_manager,producer</td>\n",
+       "      <td>tt0837562,tt2398241,tt0844471,tt0118553</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>nm0061865</td>\n",
+       "      <td>Joseph Bauer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>composer,music_department,sound_department</td>\n",
+       "      <td>tt0896534,tt6791238,tt0287072,tt1682940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>nm0062070</td>\n",
+       "      <td>Bruce Baum</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>miscellaneous,actor,writer</td>\n",
+       "      <td>tt1470654,tt0363631,tt0104030,tt0102898</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>nm0062195</td>\n",
+       "      <td>Axel Baumann</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>camera_department,cinematographer,art_department</td>\n",
+       "      <td>tt0114371,tt2004304,tt1618448,tt1224387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>nm0062798</td>\n",
+       "      <td>Pete Baxter</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>production_designer,art_department,set_decorator</td>\n",
+       "      <td>tt0452644,tt0452692,tt3458030,tt2178256</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      nconst       primary_name  birth_year  death_year  \\\n",
+       "0  nm0061671  Mary Ellen Bauder         NaN         NaN   \n",
+       "1  nm0061865       Joseph Bauer         NaN         NaN   \n",
+       "2  nm0062070         Bruce Baum         NaN         NaN   \n",
+       "3  nm0062195       Axel Baumann         NaN         NaN   \n",
+       "4  nm0062798        Pete Baxter         NaN         NaN   \n",
+       "\n",
+       "                                 primary_profession  \\\n",
+       "0         miscellaneous,production_manager,producer   \n",
+       "1        composer,music_department,sound_department   \n",
+       "2                        miscellaneous,actor,writer   \n",
+       "3  camera_department,cinematographer,art_department   \n",
+       "4  production_designer,art_department,set_decorator   \n",
+       "\n",
+       "                          known_for_titles  \n",
+       "0  tt0837562,tt2398241,tt0844471,tt0118553  \n",
+       "1  tt0896534,tt6791238,tt0287072,tt1682940  \n",
+       "2  tt1470654,tt0363631,tt0104030,tt0102898  \n",
+       "3  tt0114371,tt2004304,tt1618448,tt1224387  \n",
+       "4  tt0452644,tt0452692,tt3458030,tt2178256  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2=pd.read_csv('zippedData/imdb.title.ratings.csv.gz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tconst</th>\n",
+       "      <th>averagerating</th>\n",
+       "      <th>numvotes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tt10356526</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tt10384606</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tt1042974</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tt1043726</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>50352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tt1060240</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       tconst  averagerating  numvotes\n",
+       "0  tt10356526            8.3        31\n",
+       "1  tt10384606            8.9       559\n",
+       "2   tt1042974            6.4        20\n",
+       "3   tt1043726            4.2     50352\n",
+       "4   tt1060240            6.5        21"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -40,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
